# csd

./: Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: e2e.sh
src/: backend.rs  cli.rs  error.rs  lib.rs  main.rs  session.rs  tmux.rs
src/commands/: approve.rs  kill.rs  mod.rs  ps.rs  run.rs  send.rs  spawn.rs  state.rs
src/detect/: jsonl.rs  mod.rs  pane.rs  plan.rs
tests/: jsonl_detect.rs
tests/fixtures/: awaiting-answer.jsonl  idle-done.jsonl  plan-ready.jsonl  tool-pending.jsonl  working.jsonl
